<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Copyright (C) 2014 Advanced Card Systems Ltd. All Rights Reserved.
     
     This software is the confidential and proprietary information of Advanced
     Card Systems Ltd. ("Confidential Information").  You shall not disclose such
     Confidential Information and shall use it only in accordance with the terms
     of the license agreement you entered into with ACS.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_change_notifications"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_status" />

                <TextView
                    android:id="@+id/textView_ReaderState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_status_2" />

                <TextView
                    android:id="@+id/textView_IccState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_level" />

                <TextView
                    android:id="@+id/textView_BatteryLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textview05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_status" />

                <TextView
                    android:id="@+id/textView_BatteryStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authentication_key"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_Master_Key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/authentication_key" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView_Authentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_ATR"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apdu_command"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_ADPU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/apdu_command" />

            <TextView
                android:id="@+id/textView_Response"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escape_command"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_Escape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/escape_command" />

            <TextView
                android:id="@+id/textView_EscapeResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/system_id" />

                <TextView
                    android:id="@+id/textView_SystemId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/model_num" />

                <TextView
                    android:id="@+id/textView_ModelNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_num" />

                <TextView
                    android:id="@+id/textView_SerialNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fw_revision" />

                <TextView
                    android:id="@+id/textView_FirmwareRevision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hw_revision" />

                <TextView
                    android:id="@+id/textView_HardwareRevision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer" />

                <TextView
                    android:id="@+id/textView_Manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_service"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_level" />

                <TextView
                    android:id="@+id/textView_BatteryLevel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_status" />

                <TextView
                    android:id="@+id/textView_BatteryStatus2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_status_2" />

                <TextView
                    android:id="@+id/textView_SlotStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_Clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button_Authenticate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_StartPolling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_polling" />

                <Button
                    android:id="@+id/button_StopPolling"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stop_polling" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_PowerOn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_on_card"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_power_off_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_off_card"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <Button
                android:id="@+id/button_TransmitADPU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transmit_apdu" />

            <Button
                android:id="@+id/button_TransmitEscapeCommand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transmit_escape_command" />

            <Button
                android:id="@+id/button_GetInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_device_info" />

            <Button
                android:id="@+id/button_GetBatteryLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_battery_level" />

            <Button
                android:id="@+id/button_GetBatteryStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_battery_status" />

            <Button
                android:id="@+id/button_GetCardStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_card_status" />

            <Button
                android:id="@+id/button_SetTxPower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_tx_power" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>